--- a/css/old-styles.css
+++ b/css/old-styles.css
@@ -27,7 +27,11 @@ ol {
 button {
   cursor: pointer;
 }
-
+.container {
+  width: 1158px;
+  padding: 0 15px;
+  margin: 0 auto;
+}
 .section-title {
   color: #2e2f42;
   font-size: 36px;
@@ -43,32 +47,20 @@ button {
 img {
   display: block;
 }
-.container {
-  max-width: 320px;
-  padding-left: 16px;
-  padding-right: 16px;
-  margin-left: auto;
-  margin-right: auto;
-}
-@media screen and (min-width: 768px) {
-  .container {
-    max-width: 736px;
-  }
-}
-@media screen and (min-width: 1158px) {
-  .container {
-    max-width: 1158px;
-  }
-}
 /* ========== HEADER STYLES ========== */
-
+/* .header {
+  border-bottom: 1px solid #e7e9fc;
+  box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
+}
 .header-container {
   display: flex;
-  justify-content: space-between;
   align-items: center;
 }
-.nav-list {
-  display: none;
+.navigation {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 .logo {
   color: #4d5ae5;
@@ -83,168 +75,71 @@ img {
 .logo-part {
   color: #2e2f42;
 }
+.nav-list {
+  display: flex;
+  gap: 40px;
+}
+.nav-link {
+  color: #2e2f42;
+  font-family: inherit;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  padding: 24px 0;
+  display: block;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.active {
+  position: relative;
+  color: #404bbf;
+}
+.active::after {
+  position: absolute;
+  content: "";
+  border-radius: 2px;
+  width: 48px;
+  height: 4px;
+  bottom: -1px;
+  left: 0;
+  background-color: #404bbf;
+}
+.nav-link:hover,
+.nav-link:focus {
+  color: #404bbf;
+}
+.address {
+  font-style: normal;
+  margin-left: auto;
+}
 .address-list {
-  display: none;
+  display: flex;
+  gap: 40px;
 }
-
-/* ========== MOBILE MENU ========== */
-
-@media screen and (max-width: 767px) {
-  .header {
-    padding-top: 16px;
-    padding-bottom: 16px;
-  }
-  .mobile-menu {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: #fff;
-    color: #2e2f42;
-    z-index: 99999999;
-    overflow-y: auto;
-    transform: translateX(100%);
-    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  }
-  .mobile-menu.is-open {
-    transform: translateX(0%);
-  }
-  .mobile-open-btn {
-    line-height: 0;
-    border: none;
-    background-color: transparent;
-    padding: 0;
-    fill: #2f2f37;
-  }
-  .mobile-menu-container {
-    position: relative;
-    padding-top: 76px;
-    padding-bottom: 40px;
-  }
-  .mobile-menu-close-btn {
-    position: absolute;
-    top: 24px;
-    right: 24px;
-    line-height: 0;
-    width: 24px;
-    height: 24px;
-    border: 1px solid rgba(0, 0, 0, 0.1);
-    border-radius: 50%;
-    background-color: transparent;
-    padding: 0;
-    fill: #2e2f42;
-  }
+.address-link {
+  color: #434455;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-@media screen and (min-width: 768px) {
-  .mobile-open-btn {
-    display: none;
-  }
-  .nav-list {
-    display: flex;
-  }
-  .address-list {
-    display: flex;
-  }
-  .mobile-menu {
-    display: none;
-  }
-  .header-container {
-    display: flex;
-    align-items: center;
-    column-gap: 122px;
-  }
-  .navigation {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-  }
-  .nav-list {
-    display: flex;
-    gap: 40px;
-  }
-  .nav-link {
-    color: #2e2f42;
-    font-family: inherit;
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 1.5;
-    letter-spacing: 0.02em;
-    padding: 24px 0;
-    display: block;
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  }
-  .active {
-    position: relative;
-    color: #404bbf;
-  }
-  .active::after {
-    position: absolute;
-    content: "";
-    border-radius: 2px;
-    width: 48px;
-    height: 4px;
-    bottom: -1px;
-    left: 0;
-    background-color: #404bbf;
-  }
-  .nav-link:hover,
-  .nav-link:focus {
-    color: #404bbf;
-  }
-  .address {
-    display: block;
-    font-style: normal;
-    margin-left: auto;
-  }
-  .address-list {
-    display: flex;
-    flex-direction: column;
-    gap: 12px;
-  }
-  .address-link {
-    display: block;
-    color: #434455;
-    font-size: 12px;
-    line-height: 1.7;
-    letter-spacing: 0.04em;
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  }
-  .address-link:hover,
-  .address-link:focus {
-    color: #404bbf;
-  }
-}
-@media screen and (min-width: 1158px) {
-  .header-container {
-    column-gap: 332px;
-  }
-  .address-list {
-    display: flex;
-    flex-direction: row;
-    gap: 40px;
-  }
-  .address-link {
-    font-size: 16px;
-    line-height: 1.5;
-    letter-spacing: 0.02em;
-  }
-}
-
+.address-link:hover,
+.address-link:focus {
+  color: #404bbf;
+} */
 /* ========== HERO STYLES ========== */
-.hero {
+/* .hero {
   background-color: #2e2f42;
-  max-width: 320px;
-  min-height: 432px;
+  max-width: 1440px;
   margin-left: auto;
   margin-right: auto;
-  padding-top: 72px;
-  padding-bottom: 72px;
+  padding-top: 188px;
+  padding-bottom: 188px;
   background-image: linear-gradient(
       rgba(46, 47, 66, 0.7),
       rgba(46, 47, 66, 0.7)
     ),
-    url(../images/retina/people-office-mobile@1x.jpg);
+    url(../images/people-office.jpg);
   background-size: cover;
   background-color: #2e2f42;
   background-repeat: no-repeat;
@@ -253,10 +148,10 @@ img {
 .main-title {
   color: #fff;
   font-weight: 700;
-  font-size: 36px;
-  line-height: 1.11;
+  font-size: 56px;
+  line-height: 1.07;
   letter-spacing: 0.02em;
-  max-width: 216px;
+  max-width: 496px;
   margin-bottom: 48px;
   margin-left: auto;
   margin-right: auto;
@@ -283,88 +178,11 @@ img {
 .order-service-btn:focus {
   background: #404bbf;
   color: #fff;
-}
-
-/* ========== MOBILE MENU ========== */
-
-@media screen and (max-width: 768px) and (min-resolution: 192dpi) {
-  .hero {
-    background-image: linear-gradient(
-        rgba(46, 47, 66, 0.7),
-        rgba(46, 47, 66, 0.7)
-      ),
-      url(../images/retina/people-office-mobile@2x.jpg);
-  }
-}
-@media screen and (min-width: 768px) {
-  .hero {
-    max-width: 768px;
-    min-height: 436px;
-    padding-top: 112px;
-    padding-bottom: 112x;
-    background-image: linear-gradient(
-        rgba(46, 47, 66, 0.7),
-        rgba(46, 47, 66, 0.7)
-      ),
-      url(../images/retina/people-office-tablet@1x.jpg);
-  }
-  .main-title {
-    font-size: 56px;
-    line-height: 1.07;
-    letter-spacing: 0.02em;
-    margin-bottom: 36px;
-  }
-}
-@media screen and (min-width: 768px) and (min-resolution: 192dpi) {
-  .hero {
-    background-image: linear-gradient(
-        rgba(46, 47, 66, 0.7),
-        rgba(46, 47, 66, 0.7)
-      ),
-      url(../images/retina/people-office-tablet@2x.jpg);
-  }
-}
-@media screen and (min-width: 1158px) {
-  .hero {
-    max-width: 1440px;
-    min-height: 600px;
-    padding-top: 188px;
-    padding-bottom: 188px;
-    background-image: linear-gradient(
-        rgba(46, 47, 66, 0.7),
-        rgba(46, 47, 66, 0.7)
-      ),
-      url(../images/retina/people-office-desktop@1x.jpg);
-  }
-  .main-title {
-    font-size: 56px;
-    line-height: 1.07;
-    letter-spacing: 0.02em;
-    margin-bottom: 48px;
-  }
-}
-@media screen and (min-width: 1158px) and (min-resolution: 192dpi) {
-  .hero {
-    background-image: linear-gradient(
-        rgba(46, 47, 66, 0.7),
-        rgba(46, 47, 66, 0.7)
-      ),
-      url(../images/retina/people-office-desktop@2x.jpg);
-  }
-}
-
+} */
 /* ========== BENEFITS STYLES ========== */
-
-.benefits-list-icon {
-  display: none;
-}
-.benefits-list {
-  display: flex;
-  flex-wrap: wrap;
-  align-items: center;
-  gap: 72px;
-  margin-top: 96px;
-  margin-bottom: 96px;
+/* .benefits {
+  padding-top: 120px;
+  padding-bottom: 120px;
 }
 .visually-hidden {
   position: absolute;
@@ -378,16 +196,30 @@ img {
   clip: rect(0 0 0 0);
   overflow: hidden;
 }
+.benefits-list {
+  align-items: center;
+  display: flex;
+  gap: 24px;
+}
 .benefits-list-item {
-  width: 100%;
+  width: calc((100% - 72px) / 4);
+}
+.benefits-list-icon {
+  height: 112px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #f4f4fd;
+  border: 1px solid #8e8f99;
+  border-radius: 4px;
+  margin-bottom: 8px;
 }
 .title-benefits {
-  font-weight: 700;
   color: #2e2f42;
-  font-size: 36px;
-  line-height: 1.1;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 1.2;
   letter-spacing: 0.02em;
-  text-align: center;
   margin-bottom: 8px;
 }
 .benefits-list-text {
@@ -395,80 +227,29 @@ img {
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
-}
-@media screen and (min-width: 768px) {
-  .benefits-list {
-    flex-direction: row;
-    gap: 24px;
-    row-gap: 72px;
-    justify-content: center;
-  }
-  .benefits-list-item {
-    width: calc((100% - 24px) / 2);
-  }
-  .title-benefits {
-    text-align: left;
-  }
-}
-@media screen and (min-width: 1158px) {
-  .benefits-list {
-    gap: 24px;
-  }
-  .benefits-list-item {
-    width: calc((100% - 24px * 3) / 4);
-  }
-  .benefits-list-icon {
-    height: 112px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-color: #f4f4fd;
-    border: 1px solid #8e8f99;
-    border-radius: 4px;
-    margin-bottom: 8px;
-  }
-  .title-benefits {
-    color: #2e2f42;
-    font-weight: 500;
-    font-size: 20px;
-    line-height: 1.2;
-    letter-spacing: 0.02em;
-  }
-  .benefits-list-text {
-    font-weight: 400;
-  }
-}
-
+} */
 /* ========== TEAM STYLES ========== */
-
-.team {
+/* .team {
   background-color: #f4f4fd;
-  padding-top: 96px;
-  padding-bottom: 96px;
 }
 .section-title {
-  font-weight: 700;
+  color: #2e2f42;
   font-size: 36px;
   line-height: 1.11;
   letter-spacing: 0.02em;
-  text-align: center;
   text-transform: capitalize;
-  color: #2e2f42;
-  margin-left: auto;
-  margin-right: auto;
+  text-align: center;
   margin-bottom: 72px;
 }
 .team-list {
   display: flex;
-  flex-wrap: wrap;
   align-items: center;
-  justify-content: center;
-  gap: 72px;
+  gap: 24px;
 }
 .team-list-item {
-  border-radius: 0 0 4px 4px;
-  width: 264px;
   background-color: #ffffff;
+  width: calc((100% - 72px) / 4);
+  border-radius: 0 0 4px 4px;
   box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08),
     0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
 }
@@ -477,12 +258,12 @@ img {
   padding-bottom: 32px;
 }
 .team-list-fullname {
+  color: #2e2f42;
   font-weight: 500;
   font-size: 20px;
   line-height: 1.2;
   letter-spacing: 0.02em;
   text-align: center;
-  color: #2e2f42;
   margin-bottom: 8px;
 }
 .team-list-text {
@@ -494,18 +275,25 @@ img {
 }
 .team-social {
   display: flex;
-  gap: 24px;
   align-items: center;
   justify-content: center;
+  flex-direction: row;
+  gap: 24px;
+  margin-top: 8px;
 }
-.team-social-link {
-  display: flex;
+.team-social-item {
   width: 40px;
   height: 40px;
+}
+.team-social-link {
+  width: 100%;
+  height: 100%;
   background-color: #4d5ae5;
   border-radius: 50%;
+  display: flex;
   align-items: center;
   justify-content: center;
+  cursor: pointer;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .team-social-link:hover {
@@ -517,41 +305,26 @@ img {
 .team-social-icon {
   fill: #f4f4fd;
 }
-@media screen and (min-width: 768px) {
-  .team-list {
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: center;
-    gap: 24px;
-    row-gap: 64px;
-  }
-}
-@media screen and (min-width: 1158px) {
-  .team {
-    padding-top: 120px;
-    padding-bottom: 120px;
-  }
-  .team-list {
-    display: flex;
-    gap: 24px;
-  }
-  .team-list-item {
-    width: calc((100% - 72px) / 4);
-  }
-}
-
 /* ========== PORTFOLIO STYLES ========== */
-.portfolio {
-  padding-top: 96px;
-  padding-bottom: 96px;
+.section-title {
+  color: #2e2f42;
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.11;
+  letter-spacing: 0.02em;
+  text-transform: capitalize;
+  text-align: center;
+  margin-bottom: 72px;
 }
 .portfolio-list {
   display: flex;
   flex-wrap: wrap;
+  column-gap: 24px;
   row-gap: 48px;
   align-items: center;
 }
 .portfolio-list-item {
+  width: calc((100% - 48px) / 3);
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .portfolio-overlay {
@@ -559,12 +332,7 @@ img {
   overflow: auto;
   overflow: hidden;
 }
-.portfolio-list-item:hover {
-  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
-    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
-}
-.portfolio-list-item:hover .portfolio-overlay-text {
-  transform: translateY(0%);
+.portfolio-overlay-text {
   position: absolute;
   top: 0;
   font-size: 16px;
@@ -573,10 +341,17 @@ img {
   color: #f4f4fd;
   padding: 40px 32px;
   background-color: #4d5ae5;
-  width: 288px;
-  height: 280px;
+  width: 100%;
+  height: 100%;
   transform: translateY(100%);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.portfolio-list-item:hover {
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+}
+.portfolio-list-item:hover .portfolio-overlay-text {
+  transform: translateY(0%);
 }
 .container-info-portfolio {
   border-bottom: 1px solid #e7e9fc;
@@ -600,102 +375,72 @@ img {
   letter-spacing: 0.02em;
   margin: auto;
 }
-@media screen and (min-width: 768px) {
-  .portfolio-list {
-    flex-direction: row;
-    gap: 24px;
-    row-gap: 72px;
-    flex-wrap: wrap;
-  }
-  .portfolio-list-item {
-    width: calc((100% - 24px) / 2);
-  }
-  .portfolio-overlay-text {
-    width: 356px;
-    height: 300px;
-  }
-}
-@media screen and (min-width: 1158px) {
-  .portfolio {
-    padding-top: 120px;
-    padding-bottom: 120px;
-  }
-  .portfolio-list-item {
-    width: calc((100% - 48px) / 3);
-  }
-  .portfolio-overlay-text {
-    width: 360px;
-    height: 300px;
-  }
-}
 /* ========== FOOTER STYLES ========== */
 .footer {
   background-color: #2e2f42;
-  padding-top: 96px;
-  padding-bottom: 96px;
+  padding-top: 100px;
+  padding-bottom: 100px;
 }
 .container-footer {
-  display: flex;
-  flex-wrap: wrap;
   align-items: baseline;
-  justify-content: center;
-  gap: 72px;
+  display: flex;
 }
 .footer-content {
-  max-width: 288px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  margin-right: 120px;
 }
 .logo-footer {
-  font-family: "Raleway", sans-serif;
+  color: #4d5ae5;
+  font-family: Raleway, sans-serif;
   font-weight: 700;
   font-size: 18px;
   line-height: 1.17;
   letter-spacing: 0.03em;
   text-transform: uppercase;
-  color: #4d5ae5;
   margin-bottom: 16px;
+  display: inline-block;
 }
 .logo-part-footer {
   color: #f4f4fd;
 }
 .footer-text {
-  font-weight: 400;
+  color: #f4f4fd;
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
-  color: #f4f4fd;
-  align-items: center;
-  justify-content: center;
+  max-width: 264px;
 }
 .footer-social {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  margin-right: 80px;
 }
 .footer-social-title {
   font-weight: 500;
   font-size: 16px;
-  line-height: 1.5;
+  line-height: 150%;
   letter-spacing: 0.02em;
-  color: #ffffff;
   margin-bottom: 16px;
+  text-align: center;
+  color: #fff;
 }
 .footer-social-list {
   display: flex;
-  gap: 16px;
   align-items: center;
   justify-content: center;
+  flex-direction: row;
+  gap: 16px;
+}
+.footer-social-item {
+  width: 40px;
+  height: 40px;
 }
 .footer-social-link {
-  display: flex;
   width: 40px;
   height: 40px;
   background-color: #4d5ae5;
   border-radius: 50%;
+  display: flex;
   align-items: center;
   justify-content: center;
+  cursor: pointer;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .footer-social-icon {
@@ -714,27 +459,37 @@ img {
   letter-spacing: 0.02em;
   color: #ffffff;
   margin-bottom: 16px;
-  text-align: center;
+  text-align: left;
 }
 .footer-email-form {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   justify-content: center;
-  gap: 16px;
-}
-.footer-email-input {
-  width: 288px;
+  align-items: center;
+  max-width: 453px;
   height: 40px;
-  border: 1px solid #ffffff;
-  border-radius: 4px;
-  padding-left: 16px;
-  background-color: transparent;
+  gap: 24px;
+}
+.footer-email-label {
+  display: flex;
   font-weight: 400;
   font-size: 12px;
   line-height: 2;
   letter-spacing: 0.04em;
   color: #ffffff;
+}
+.footer-email-input {
+  border: 1px solid #fff;
+  border-radius: 4px;
+  line-height: 2;
+  letter-spacing: 0.04em;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  width: 264px;
+  height: 40px;
+  background-color: transparent;
+  padding-left: 16px;
+  color: #ffffff;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .footer-subscribe-btn {
   display: flex;
@@ -760,55 +515,6 @@ img {
   fill: #fff;
   margin-left: 16px;
 }
-@media screen and (min-width: 768px) {
-  .container-footer {
-    flex-direction: row;
-    justify-content: left;
-    padding-left: 108px;
-    gap: 24px;
-    row-gap: 72px;
-  }
-  .logo-footer {
-    max-width: 264px;
-    align-items: baseline;
-  }
-  .footer-social {
-    align-items: baseline;
-  }
-  .footer-email-title {
-    text-align: left;
-  }
-  .footer-email-subscribe {
-    align-items: baseline;
-  }
-  .footer-email-form {
-    flex-direction: row;
-    gap: 24px;
-  }
-  .footer-email-input {
-    width: 264px;
-  }
-}
-@media screen and (min-width: 1158px) {
-  .footer {
-    padding-top: 100px;
-    padding-bottom: 100px;
-  }
-
-  .container-footer {
-    flex-direction: row;
-    padding-left: 16px;
-    gap: 0;
-    row-gap: 0;
-  }
-  .footer-content {
-    margin-right: 120px;
-  }
-  .footer-social {
-    margin-right: 80px;
-  }
-}
-
 /* ========== BACKDROP STYLES ========== */
 .backdrop {
   position: fixed;
@@ -920,6 +626,9 @@ img {
 .backdrop-contacts-form-input:focus {
   border-color: #4d5ae5;
 }
+.backdrop-contacts-form-input:focus + .backdrop-contacts-form-icon {
+  fill: #4d5ae5;
+}
 .backdrop-contacts-form-icon {
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -1012,10 +721,4 @@ img {
   border: none;
   margin: 0 auto;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-@media screen and (min-width: 768px) {
-  modal {
-    width: 408px;
-    min-height: 584px;
-  }
 }
